--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-validator": "^2.8.0",
     "finished": "^1.2.2",
     "it-each": "^0.3.1",
+    "lodash": "~>4.17.5",
     "method-override": "^2.3.1",
     "moment": "^2.8.4",
     "morgan": "^1.5.1",
